<resources>
    <string name="app_name">ProjectE</string>
    <string name="spinner_prompt">Add Courses</string>
    <string name="headerName">Study Buddy</string>
    <string name="enrolledTitle">Enrolled Courses</string>
    <string name="homePageB">Home Screen</string>
    <string name="signoutB">Sign Out</string>
    <string name="nameT">Name</string>
    <string name="groups">My Groups</string>
    <string name="logout">Log Out</string>
    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>
</resources>