<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/enrolledCourses"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D8BFD8"
    tools:context=".EnrolledCoursesActivity">

    <TextView
        android:id="@+id/header"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:background="#4B0082"
        android:text="@string/headerName"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:gravity="center"
        android:padding="16dp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/enrolledCoursesText"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:text="@string/enrolledTitle"
        android:textColor="@android:color/white"
        android:textSize="35sp"
        android:gravity="center"
        android:padding="16dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="115dp"
        />

    <TextView
        android:id="@+id/listCourses"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:text="COURSES"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:gravity="center"
        android:padding="16dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/enrolledCoursesText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/HomePageButton"
        android:layout_marginTop="115dp"
        />

    <Button
        android:id="@+id/signoutButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/signoutB"
        android:backgroundTint="#D3D3D3"
        android:textColor="#666666"
        android:textSize="16sp"
        android:padding="12dp"
        android:layout_marginTop="300dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="170dp"
        app:layout_constraintTop_toBottomOf="@id/listCourses"
        />

    <Button
        android:id="@+id/HomePageButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/homePageB"
        android:backgroundTint="#D3D3D3"
        android:textColor="#666666"
        android:textSize="16sp"
        android:padding="12dp"
        android:layout_marginTop="300dp"
        android:layout_marginStart="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/listCourses"
        app:layout_constraintEnd_toStartOf="@+id/signoutButton"

        />

</androidx.constraintlayout.widget.ConstraintLayout>